--- a/src/main/resources/static/web/assets/pages/creams.html
+++ b/src/main/resources/static/web/assets/pages/creams.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://unpkg.com/bootstrap-icons@1.19.0/font/bootstrap-icons.css"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body style="background-color: #d2d2d2;">
@@ -37,7 +38,7 @@
                                     style="color: aliceblue;">Home</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
+                                <a style="color: #fbb002d4;" class="nav-link dropdown-toggle" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Products
                                 </a>
@@ -263,7 +264,7 @@
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
                     <div class="card container-img-body m-3" v-for="cream of creams"
-                        style="width: 20rem;">
+                        style="width: 20rem;" data-aos="zoom-in">
                         <h5
                             style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
                             Stock: {{cream.stock}}</h5>
@@ -361,6 +362,10 @@
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/creams.js"></script>
 
