--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color:#020305;">
                 <div class="container-fluid">
-                    <img src="./web/assets/images/logo 2.png" alt="" style="width: 13%;">
+                    <img src="./web/assets/images/logo 2.png" alt="" style="width: 13%;" >
                     <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#"
-                                    style="color: aliceblue;">Home</a>
+                                    style="color: #fbb002d4">Home</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
