--- a/src/main/resources/static/web/assets/pages/detailsCreams.html
+++ b/src/main/resources/static/web/assets/pages/detailsCreams.html
@@ -177,14 +177,16 @@
         <main>
 
             <div class="d-flex justify-content-center">
-                <div style="display: flex !important; background-color: white; margin-top: 2rem; width: 80%; justify-content: center; align-items: center;">
+                <div style="display: flex !important; background-color: white; margin-top: 2rem; width: 80%; justify-content: center; align-items: center; padding: 1rem;">
                     <div>
                         <img :src="cream.image" class="card-img-top" alt="..." style="width: 100%;">
                     </div>
                     <div class="card-body">     
                         <h5 class="card-title">{{cream.name}}</h5>
-                        <p class="card-text">{{cream.description}}</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        <p class="card-text" style="text-align: justify;">{{cream.description}}</p>
+                        <p class="card-text"><small class="text-body-secondary">Stock: {{cream.stock}}</small></p>
+                        <a v-if="cream.stock > 0" @click="addFromCart(cream)" class="btn"
+                            style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
                     </div>
                 </div>
             </div>
