--- a/src/main/resources/static/web/assets/pages/register.html
+++ b/src/main/resources/static/web/assets/pages/register.html
@@ -188,7 +188,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="textInput5" class="form-label">Password:</label>
-                            <input v-model="password" type="password" id="textInput5" class="form-control">
+                            <input v-model="password" type="password" id="textInput5" class="form-control" @keyup.enter="register">
                         </div>
                         <div class="d-flex justify-content-center" style="padding-bottom: 0.5rem;">
                             <button type="button" class="btn" style="background-color: #ec225e; color: aliceblue;" @click="register">Register</button>
