--- a/src/main/resources/static/web/assets/pages/air-fresheners.html
+++ b/src/main/resources/static/web/assets/pages/air-fresheners.html
@@ -49,7 +49,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../../../index.html#AboutUs" style="color: aliceblue;">About
+                                <a class="nav-link active" aria-current="page" href="../../../index.html#AboutUs"
+                                    style="color: aliceblue;">About
                                     Us</a>
                             </li>
                             <li class="nav-item">
@@ -61,19 +62,21 @@
                                     style="color: aliceblue;">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page" href="../../../administrator/assets/pages/create-products.html"
+                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page"
+                                    href="../../../administrator/assets/pages/create-products.html"
                                     style="color: aliceblue;">Administrator</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="d-flex" style="gap: 1rem;">
-                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !</h5>
+                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !
+                    </h5>
                     <a v-if="!email" href="./log-in.html"
                         style="color: #ec225e; cursor: pointer; font-weight: 500;">LogIn</a>
                     <a v-if="!email" href="./register.html"
                         style="color: #ec225e; cursor: pointer; font-weight: 500">Register</a>
-                    <a v-if="email"  @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
+                    <a v-if="email" @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
 
                 </div>
                 <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
@@ -174,7 +177,8 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <form @submit.prevent="filterSearch" class="d-flex flex-column search-form-overlay justify-content-center align-items-center"
+                <form @submit.prevent="filterSearch"
+                    class="d-flex flex-column search-form-overlay justify-content-center align-items-center"
                     role="search">
                     <div class="d-flex">
                         <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search"
@@ -237,6 +241,8 @@
             <h1
                 style="font-size: 3rem !important; text-align: center; margin-top: 1rem; color: #ec225e; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
                 Air fresheners</h1>
+            <h5 v-if="errorPriceAndPresentation" style="text-align: center; position: relative; top: 15rem;">
+                {{errorPriceAndPresentation}}</h5>
             <div class="d-flex">
                 <div class="d-flex flex-column gap-5" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
                     <div class="d-flex flex-column">
@@ -264,8 +270,8 @@
                         style="background-color:#020305; color:#ffffff;">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" v-for="airFreshener of airFresheners"
-                        style="width: 20rem;" data-aos="zoom-in">
+                    <div class="card container-img-body m-3" v-for="airFreshener of airFresheners" style="width: 20rem;"
+                        data-aos="zoom-in">
                         <h5
                             style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
                             Stock: {{airFreshener.stock}}</h5>
@@ -274,7 +280,8 @@
                         <div class="card-body">
                             <h5 class="card-title" style="text-align: center;">{{airFreshener.name}}
                                 ({{airFreshener.content}}ml)</h5>
-                            <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(airFreshener.price)}}</h5>
+                            <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(airFreshener.price)}}
+                            </h5>
                             <p
                                 style="text-align: center; white-space: pre-line; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; display: -webkit-box;">
                                 {{airFreshener.description}}</p>
@@ -366,7 +373,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
-  </script>
+</script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/air-fresheners.js"></script>
 
