--- a/src/main/resources/static/web/assets/pages/fragances.html
+++ b/src/main/resources/static/web/assets/pages/fragances.html
@@ -62,14 +62,16 @@
                                     style="color: aliceblue;">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page" href="../../../administrator/assets/pages/create-products.html"
+                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page"
+                                    href="../../../administrator/assets/pages/create-products.html"
                                     style="color: aliceblue;">Administrator</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="d-flex" style="gap: 1rem;">
-                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !</h5>
+                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !
+                    </h5>
                     <a v-if="!email" href="./log-in.html"
                         style="color: #ec225e; cursor: pointer; font-weight: 500;">LogIn</a>
                     <a v-if="!email" href="./register.html"
@@ -241,6 +243,8 @@
             <h1
                 style="font-size: 3rem !important; text-align: center; margin-top: 1rem; color: #ec225e; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
                 Fragances</h1>
+            <h5 v-if="errorPriceAndGender" style="text-align: center; position: relative; top: 15rem;">
+                {{errorPriceAndGender}}</h5>
             <div class="d-flex justify-content-end" style="gap: 2rem; margin-right: 1rem;">
                 <a href="./air-fresheners.html" style="color: #ec225e; cursor: pointer; font-weight: 700;">Buy Air
                     Fresheners</a>
@@ -273,7 +277,8 @@
                         style="background-color:#020305; color:#ffffff;">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" v-for="fragance of fragances" style="width: 20rem;" data-aos="zoom-in">
+                    <div class="card container-img-body m-3" v-for="fragance of fragances" style="width: 20rem;"
+                        data-aos="zoom-in">
                         <h5
                             style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
                             Stock: {{fragance.stock}}</h5>
@@ -379,7 +384,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
-  </script>
+</script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/fragances.js"></script>
 
