--- a/src/main/resources/static/administrator/assets/pages/create-products.html
+++ b/src/main/resources/static/administrator/assets/pages/create-products.html
@@ -103,7 +103,7 @@
                         </svg>
                     </a>
 
-                    <a style="color: #ec225e; cursor: pointer;">LogOut</a>
+                    <a v-if="email" @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
 
 
                 </nav>
@@ -313,89 +313,101 @@
                             style="margin-top: 3rem; gap: 4rem;">
                             <img src="../../../web/assets/images/Perfume-la-vida-es-bella.png"
                                 style="width: 40%; object-fit: contain;" alt="">
-                            <div>
-                                <div class="input-group mb-3">
-                                    <select v-model="fraganceSelected" class="form-select" id="inputGroupSelect01"
-                                        @change="updateIdFragance">
-                                        <option value="">Select the fragrance</option>
-                                        <option v-for="fragance of fragances" :value="fragance">{{fragance.name}}
-                                        </option>
-                                    </select>
-                                    <label class="input-group-text" for="inputGroupSelect01">Fragance</label>
+                            <div class="d-flex flex-column justify-content-end align-items-center">
+                                <div class="d-flex align-items-center justify-content-around">
+                                    <div class="input-group mb-3">
+                                        <select v-model="fraganceSelected" class="form-select" id="inputGroupSelect01"
+                                            @change="updateIdFragance">
+                                            <option value="">Select the fragrance</option>
+                                            <option v-for="fragance of fragances" :value="fragance">
+                                                {{fragance.name}}
+                                            </option>
+                                        </select>
+                                        <label class="input-group-text" for="inputGroupSelect01">Fragance</label>
+
+                                    </div>
                                 </div>
-                                <div v-if="fraganceSelected && fraganceSelected !== '' && fraganceSelected !== 'Select the fragrance'"
-                                    class="d-flex">
-                                    <div>
-                                        <div class="d-flex flex-column align-items-center">
-                                            <legend style="text-align: center; color: #ec225e; font-weight: 600;">
-                                                Update a fragance here!</legend>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <span class="input-group-text" id="basic-addon1">Name</span>
-                                            <input v-model="fraganceSelected.name" type="text" class="form-control"
-                                                aria-label="name" aria-describedby="basic-addon1">
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <select v-model="fraganceSelected.olfactoryFamily" class="form-select"
-                                                id="inputGroupSelect01">
-                                                <option selected>Select</option>
-                                                <option value="FLOWERY">Flowery</option>
-                                                <option value="CITRUS">Citrus</option>
-                                                <option value="CHYPRE">Chypre</option>
-                                                <option value="ORIENTAL">Oriental</option>
-                                                <option value="FOUGÉRE">Fougére</option>
-                                                <option value="WOODY">Woody</option>
-                                            </select>
-                                            <label class="input-group-text" for="inputGroupSelect01">Olfactor
-                                                Family</label>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <label class="input-group-text" for="inputGroupSelect01">Gender</label>
-                                            <select v-model="fraganceSelected.gender" class="form-select"
-                                                id="inputGroupSelect01">
-                                                <option selected>Select</option>
-                                                <option value="WOMEN">Femenine</option>
-                                                <option value="MAN">Masculine</option>
-                                            </select>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <select v-model="fraganceSelected.presentation" class="form-select"
-                                                id="inputGroupSelect01">
-                                                <option selected>Select</option>
-                                                <option value="CLASICPACKAGE">Classic packaging</option>
-                                                <option value="TRIBUTE">Tribute</option>
-                                            </select>
-                                            <label class="input-group-text"
-                                                for="inputGroupSelect01">Presentation</label>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <span class="input-group-text" id="basic-addon1">Content</span>
-                                            <input v-model="fraganceSelected.content" type="number" class="form-control"
-                                                aria-label="content" aria-describedby="basic-addon1">
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <input v-model="fraganceSelected.price" type="text" class="form-control"
-                                                aria-label="Amount (to the nearest dollar)">
-                                            <span class="input-group-text">$</span>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <span class="input-group-text">Description</span>
-                                            <textarea v-model="fraganceSelected.description" class="form-control"
-                                                aria-label="With textarea"></textarea>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <input v-model="fraganceSelected.stock" type="number" class="form-control"
-                                                aria-label="content" aria-describedby="basic-addon1">
-                                            <span class="input-group-text" id="basic-addon1">Stock</span>
-                                        </div>
-                                        <div class="input-group mb-3">
-                                            <span class="input-group-text" id="basic-addon1">Image Url</span>
-                                            <input v-model="fraganceSelected.image" type="text" class="form-control"
-                                                aria-label="content" aria-describedby="basic-addon1">
-                                        </div>
-                                        <div class="d-flex justify-content-center" style="margin-bottom: 1rem;">
-                                            <button @click="updateFragance" type="button" class="btn"
-                                                style="background-color: #ec225e; color: aliceblue;">Update</button>
+                                <div>
+                                    <div v-if="fraganceSelected && fraganceSelected !== '' && fraganceSelected !== 'Select the fragrance'"
+                                        class="d-flex">
+                                        <div>
+                                            <div class="d-flex flex-column align-items-center">
+                                                <legend style="text-align: center; color: #ec225e; font-weight: 600;">
+                                                    Update a fragance here!</legend>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">Name</span>
+                                                <input v-model="fraganceSelected.name" type="text" class="form-control"
+                                                    aria-label="name" aria-describedby="basic-addon1">
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <select v-model="fraganceSelected.olfactoryFamily" class="form-select"
+                                                    id="inputGroupSelect01">
+                                                    <option selected>Select</option>
+                                                    <option value="FLOWERY">Flowery</option>
+                                                    <option value="CITRUS">Citrus</option>
+                                                    <option value="CHYPRE">Chypre</option>
+                                                    <option value="ORIENTAL">Oriental</option>
+                                                    <option value="FOUGÉRE">Fougére</option>
+                                                    <option value="WOODY">Woody</option>
+                                                </select>
+                                                <label class="input-group-text" for="inputGroupSelect01">Olfactor
+                                                    Family</label>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <label class="input-group-text" for="inputGroupSelect01">Gender</label>
+                                                <select v-model="fraganceSelected.gender" class="form-select"
+                                                    id="inputGroupSelect01">
+                                                    <option selected>Select</option>
+                                                    <option value="WOMEN">Femenine</option>
+                                                    <option value="MAN">Masculine</option>
+                                                </select>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <select v-model="fraganceSelected.presentation" class="form-select"
+                                                    id="inputGroupSelect01">
+                                                    <option selected>Select</option>
+                                                    <option value="CLASICPACKAGE">Classic packaging</option>
+                                                    <option value="TRIBUTE">Tribute</option>
+                                                </select>
+                                                <label class="input-group-text"
+                                                    for="inputGroupSelect01">Presentation</label>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">Content</span>
+                                                <input v-model="fraganceSelected.content" type="number"
+                                                    class="form-control" aria-label="content"
+                                                    aria-describedby="basic-addon1">
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <input v-model="fraganceSelected.price" type="text" class="form-control"
+                                                    aria-label="Amount (to the nearest dollar)">
+                                                <span class="input-group-text">$</span>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text">Description</span>
+                                                <textarea v-model="fraganceSelected.description" class="form-control"
+                                                    aria-label="With textarea"></textarea>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <input v-model="fraganceSelected.stock" type="number"
+                                                    class="form-control" aria-label="content"
+                                                    aria-describedby="basic-addon1">
+                                                <span class="input-group-text" id="basic-addon1">Stock</span>
+                                            </div>
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">Image Url</span>
+                                                <input v-model="fraganceSelected.image" type="text" class="form-control"
+                                                    aria-label="content" aria-describedby="basic-addon1">
+                                            </div>
+                                            <div class="d-flex justify-content-center gap-4"
+                                                style="margin-bottom: 1rem;">
+                                                <button @click="updateFragance" type="button" class="btn"
+                                                    style="background-color: #ec225e; color: aliceblue;">Update</button>
+                                                <a v-if="fraganceSelected && fraganceSelected !== '' && fraganceSelected !== 'Select the fragrance'"
+                                                    @click="deleteFragance" class="btn"
+                                                    style="background-color:#010101; color:#ffffff;">Delete Fragance</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -472,9 +484,13 @@
                                                 class="form-control" aria-label="content"
                                                 aria-describedby="basic-addon1">
                                         </div>
-                                        <div class="d-flex justify-content-center" style="margin-bottom: 1rem;">
+                                        <div class="d-flex justify-content-center gap-4" style="margin-bottom: 1rem;">
                                             <button @click="updateAirFreshener" type="button" class="btn"
                                                 style="background-color: #ec225e; color: aliceblue;">Update</button>
+                                            <a v-if="airFreshenerSelected && airFreshenerSelected !== '' && airFreshenerSelected !== 'Select the air freshener'"
+                                                @click="deleteAirFreshener" class="btn"
+                                                style="background-color:#010101; color:#ffffff;">Delete Air
+                                                Freshener</a>
                                         </div>
                                     </div>
                                 </div>
@@ -513,7 +529,8 @@
                                                 aria-label="name" aria-describedby="basic-addon1">
                                         </div>
                                         <div class="input-group mb-3">
-                                            <select v-model="creamSelected.type" class="form-select" id="inputGroupSelect01">
+                                            <select v-model="creamSelected.type" class="form-select"
+                                                id="inputGroupSelect01">
                                                 <option selected>Select</option>
                                                 <option value="FACIAL">Face</option>
                                                 <option value="BODY">Body</option>
@@ -547,9 +564,12 @@
                                             <input v-model="creamSelected.image" type="text" class="form-control"
                                                 aria-label="content" aria-describedby="basic-addon1">
                                         </div>
-                                        <div class="d-flex justify-content-center" style="margin-bottom: 1rem;">
+                                        <div class="d-flex justify-content-center gap-4" style="margin-bottom: 1rem;">
                                             <button @click="updateCream" type="button" class="btn"
                                                 style="background-color: #ec225e; color: aliceblue;">Update</button>
+                                                <a v-if="creamSelected && creamSelected !== '' && creamSelected !== 'Select the cream'"
+                                                    @click="deleteCream" class="btn"
+                                                    style="background-color:#010101; color:#ffffff;">Delete Cream</a>
                                         </div>
                                     </div>
                                 </div>
