--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color:#020305;">
                 <div class="container-fluid">
-                    <img src="./web/assets/images/logo 2.png" alt="" style="width: 13%;" >
+                    <img src="./web/assets/images/logo 2.png" alt="" style="width: 13%;">
                     <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -63,20 +63,22 @@
                                     style="color: aliceblue;">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page" href="./administrator/assets/pages/create-products.html"
+                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page"
+                                    href="./administrator/assets/pages/create-products.html"
                                     style="color: aliceblue;">Administrator</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                
+
                 <div class="d-flex" style="gap: 1rem;">
-                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !</h5>
+                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !
+                    </h5>
                     <a v-if="!email" href="./web/assets/pages/log-in.html"
                         style="color: #ec225e; cursor: pointer; font-weight: 500;">LogIn</a>
                     <a v-if="!email" href="./web/assets/pages/register.html"
                         style="color: #ec225e; cursor: pointer; font-weight: 500">Register</a>
-                    <a v-if="email"  @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
+                    <a v-if="email" @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
 
                 </div>
                 <button class="btn position-relative" type="button" data-bs-toggle="offcanvas"
@@ -331,11 +333,83 @@
                 </div>
 
             </div>
-            
+
+            <section style="padding: 2rem;">
+                <!-- icono -->
+                <h2 style="text-align: center;">Development team</h2>
+                <p style="text-align: center; width: 100%;">At the heart of our online presence is our dedicated web development team. Every line of code is
+                    created by passionate developers. Discover the talent driving our on-site expertise, combining
+                    creativity and technical skills to take our fragrance platform to new heights. Meet the team that
+                    brings our digital vision to life and ensures an exceptional online experience.</p>
+                <div class="d-flex justify-content-around">
+                    <div class="d-flex flex-column align-items-center">
+                        <img src="" alt="" style="height: 10rem">
+                        <p style="text-align: center; font-size: 0.8rem;">Back end developer</p>
+                        <h6 style="text-align: center;">Sapio Luciano</h6>
+                        <div class="d-flex">
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://www.facebook.com/"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://linkedin.com/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-square button-footer" style="color: #2294ec;"
+                                href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column align-items-center">
+                        <img src="" alt="" style="height: 10rem;">
+                        <p style="text-align: center; font-size: 0.8rem;">Back end developer</p>
+                        <h6 style="text-align: center;">Alfonso Isaac</h6>
+                        <div class="d-flex">
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://www.facebook.com/"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://linkedin.com/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-square button-footer" style="color: #2294ec;"
+                                href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column align-items-center">
+                        <img src="" alt="" style="height: 10rem;">
+                        <p style="text-align: center; font-size: 0.8rem;">Front end developer</p>
+                        <h6 style="text-align: center;">Guzman Jenys</h6>
+                        <div class="d-flex">
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://www.facebook.com/"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://linkedin.com/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-square button-footer" style="color: #2294ec;"
+                                href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column align-items-center">
+                        <img src="./web/assets/images/Ariana Alochis.png" alt="" style="height: 10rem;">
+                        <p style="text-align: center; font-size: 0.8rem;">Front end developer</p>
+                        <h6 style="text-align: center;">Alochis Ariana</h6>
+                        <div class="d-flex">
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://www.facebook.com/"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-square mr-2 button-footer"
+                                style="color: #2294ec;" href="https://linkedin.com/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-square button-footer" style="color: #2294ec;"
+                                href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
         </main>
         <footer>
             <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5"
-                style="margin-top: 90px;background-color: #020305;">
+                style="background-color: #020305;">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="col-lg-3 col-md-6 mb-6">
                         <a href="" class="navbar-brand">
