--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,10 +55,6 @@
                                     Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"
-                                    style="color: aliceblue;">Blog</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#Contact"
                                     style="color: aliceblue;">Contact</a>
                             </li>
@@ -343,7 +339,7 @@
                     brings our digital vision to life and ensures an exceptional online experience.</p>
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column align-items-center">
-                        <img src="" alt="" style="height: 10rem">
+                        <img src="./web/assets/images/github_logo_icon_143772.png" alt="" style="height: 8rem">
                         <p style="text-align: center; font-size: 0.8rem;">Back end developer</p>
                         <h6 style="text-align: center;">Sapio Luciano</h6>
                         <div class="d-flex">
@@ -358,7 +354,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column align-items-center">
-                        <img src="" alt="" style="height: 10rem;">
+                        <img src="./web/assets/images/github_logo_icon_143772.png" alt="" style="height: 8rem;">
                         <p style="text-align: center; font-size: 0.8rem;">Back end developer</p>
                         <h6 style="text-align: center;">Alfonso Isaac</h6>
                         <div class="d-flex">
@@ -373,7 +369,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column align-items-center">
-                        <img src="" alt="" style="height: 10rem;">
+                        <img src="./web/assets/images/github_logo_icon_143772.png" alt="" style="height: 8rem;">
                         <p style="text-align: center; font-size: 0.8rem;">Front end developer</p>
                         <h6 style="text-align: center;">Guzman Jenys</h6>
                         <div class="d-flex">
@@ -388,7 +384,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column align-items-center">
-                        <img src="./web/assets/images/Ariana Alochis.png" alt="" style="height: 10rem;">
+                        <img src="./web/assets/images/github_logo_icon_143772.png" alt="" style="height: 8rem;">
                         <p style="text-align: center; font-size: 0.8rem;">Front end developer</p>
                         <h6 style="text-align: center;">Alochis Ariana</h6>
                         <div class="d-flex">
