Ultimas modificaciones: Cambio nombre "Fragrance", Productos subidos manualmente.

--- a/src/main/resources/static/administrator/assets/pages/create-products.html
+++ b/src/main/resources/static/administrator/assets/pages/create-products.html
@@ -120,7 +120,7 @@
                             <div>
                                 <legend
                                     style="text-align: center; color: #ec225e; font-weight: 600;margin-bottom: 1rem;">
-                                    Create a new fragance here!</legend>
+                                    Create a new fragrance here!</legend>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">Name</span>
                                     <input v-model="nameFragance" type="text" class="form-control" aria-label="name"
@@ -319,8 +319,8 @@
                                         <select v-model="fraganceSelected" class="form-select" id="inputGroupSelect01"
                                             @change="updateIdFragance">
                                             <option value="">Select the fragrance</option>
-                                            <option v-for="fragance of fragances" :value="fragance">
-                                                {{fragance.name}}
+                                            <option v-for="fragrance of fragances" :value="fragrance">
+                                                {{fragrance.name}}
                                             </option>
                                         </select>
                                         <label class="input-group-text" for="inputGroupSelect01">Fragance</label>
@@ -333,7 +333,7 @@
                                         <div>
                                             <div class="d-flex flex-column align-items-center">
                                                 <legend style="text-align: center; color: #ec225e; font-weight: 600;">
-                                                    Update a fragance here!</legend>
+                                                    Update a fragrance here!</legend>
                                             </div>
                                             <div class="input-group mb-3">
                                                 <span class="input-group-text" id="basic-addon1">Name</span>
