--- a/src/main/resources/static/web/assets/pages/air-fresheners.html
+++ b/src/main/resources/static/web/assets/pages/air-fresheners.html
@@ -276,14 +276,15 @@
                             <h5
                                 style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
                                 Stock: {{airFreshener.stock}}</h5>
-                            <p v-if="airFreshener.stock < 4" style="color: #f00; text-align: center; font-weight: 600; margin-right: 1rem;">Last
+                            <p v-if="airFreshener.stock < 4"
+                                style="color: #f00; text-align: center; font-weight: 600; margin-right: 1rem;">Last
                                 units!</p>
                         </div>
                         <img :src="airFreshener.image" class="card-img-top card-image-me"
                             style="height: 15rem; object-fit: contain;">
                         <div class="card-body">
-                            <h5 class="card-title" style="text-align: center;">{{airFreshener.name}}
-                                ({{airFreshener.content}}ml)</h5>
+                            <h5 class="card-title" style="text-align: center; min-height: 3rem;">{{airFreshener.name}}</h5>
+                            <h5 class="card-title" style="text-align: center;"> ({{airFreshener.content}}ml)</h5>
                             <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(airFreshener.price)}}
                             </h5>
                             <p
