--- a/src/main/resources/static/web/assets/pages/fragances.html
+++ b/src/main/resources/static/web/assets/pages/fragances.html
@@ -276,22 +276,20 @@
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
                     <div class="card container-img-body m-3" v-for="fragance of fragances" style="width: 20rem;"
                         data-aos="zoom-in">
-                        <div class="d-flex justify-content-between">
-                            <h6
-                                style="color: #000000; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h6 style="color: #000000; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
                                 {{fragance.gender}}</h6>
-                            <div>
-                                <h5
-                                    style="color: #ec225e; font-weight: 700; margin: 1rem;">
-                                    Stock: {{fragance.stock}}</h5>
-                                <p v-if="fragance.stock < 4" style="color: #f00; text-align: center; font-weight: 600;">Last units!</p> 
-                            </div>
+                            <p v-if="fragance.stock < 4" style="color: #f00; font-weight: 600; margin: 1rem">Last
+                                units!</p>
+                            <h5 style="color: #ec225e; font-weight: 700; margin: 1rem;">
+                                Stock: {{fragance.stock}}</h5>
                         </div>
                         <img :src="fragance.image" class="card-img-top card-image-me"
                             style="height: 15rem; object-fit: contain;">
                         <div class="card-body">
-                            <h5 class="card-title" style="text-align: center;">{{fragance.name}}
-                                ({{fragance.content}}ml)</h5>
+                            <h5 class="card-title" style="text-align: center;">{{fragance.name}}</h5>
+                            <h5 class="card-title" style="text-align: center;">
+                            ({{fragance.content}}ml)</h5>
                             <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(fragance.price)}}</h5>
                             <div>
                                 <h6 class="card-text" style="text-align: center;">Olfactory Family: <span
